<resources>
    <string name="app_name">CST 338 HW 4 - GymLog</string>
    <string name="exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a weight</string>
    <string name="reps">Reps</string>
    <string name="enter_reps">Enter reps</string>
    <string name="log">Log!</string>
    <string name="nothing_to_show_time_to_hit_the_gym">Nothing to show - time to hit the gym!</string>
    <string name="welcome_to_the_gymlog_nplease_sign_in">Welcome to the GymLog.\nPlease sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">daclinkPreferenceFileNameGymLog</string>
    <string name="preference_user_id_key">daclinkGymLogPreferenceUserIDKey</string>
</resources>