<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:text="@string/exercise"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseInputEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/logDisplayTextView"
        android:hint="@string/enter_an_exercise"
        />

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:text="@string/weight"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightInputEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/exerciseInputEditText"
        android:hint="@string/enter_a_weight"
        />

    <TextView
        android:id="@+id/repsLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:text="@string/reps"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/repsInputEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repsInputEditText"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/repsLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/weightInputEditText"
        android:hint="@string/enter_reps"
        />




</androidx.constraintlayout.widget.ConstraintLayout>